Add responsible officer to handover api
